<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ChildLinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_tv_label"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etPanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/panjang_tv_label"
            android:inputType="number" />

        <EditText
            android:id="@+id/etLebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lebar_tv_label"
            android:inputType="number" />
        <EditText
            android:id="@+id/etTinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Tinggi_tv_label"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChildLinear1">

        <Button
            android:id="@+id/btnKeliling"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"
            android:onClick="hitung_keliling"
            android:text="@string/keliling_btn_label" />

        <Button
            android:id="@+id/btnLuas"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_weight="1"
            android:onClick="hitung_luas"
            android:text="@string/luas_btn_label" />

        <Button
            android:id="@+id/btnVolume"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_weight="1"
            android:onClick="hitung_volume"
            android:text="@string/volume_btn_label" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>